--- a/DS AI.css
+++ b/DS AI.css
@@ -84,7 +84,7 @@ nav li:first-of-type, nav li:nth-child(2){
 
 header{
 	grid-area: header;
-	background-image: url("img/arcade.jpg");
+	background-image: url("img/arcade3.jpg");
 	display: grid;
 	align-items: center;
 	padding-top: 8rem;
