--- a/DS AI.css
+++ b/DS AI.css
@@ -21,6 +21,15 @@ html{
 	src: url("fonts/Minecraft.otf");
 }
 
+@font-face{
+	font-family: Montserrat;
+	src: url("fonts/Montserrat-Bold.ttf");
+}
+@font-face{
+	font-family: Montserrat;
+	src: url("fonts/Montserrat-Regular.ttf");
+}
+
 body{
 	display: grid;
 	min-height: 100%;
@@ -165,7 +174,7 @@ header, section, #acerca, aside, #contacto, footer{
 }
 
 h1{
-	font-family: unlearn;
+	font-family: Montserrat;
 	font-size: 8rem;
 	background: linear-gradient(to right, fuchsia, magenta);
 	-webkit-background-clip: text;
@@ -174,7 +183,7 @@ h1{
 }
 
 h2{
-	font-family: Minecraft;
+	font-family: Montserrat;
 	font-size: 2rem;
 	color: rgb(255, 255, 255);
 }
